lb.tf
resource "aws_lb" "alb" {
  name               = "${var.environment}-alb"
  load_balancer_type = "application"
  subnets            = aws_subnet.public[*].id
  security_groups    = [aws_security_group.alb_sg.id]
}


resource "aws_lb_target_group" "tg" {
  name     = "${var.environment}-tg"
  port     = v80
  protocol = "HTTP"
  vpc_id   = aws_vpc.this.id
  target_type = "instance"
  health_check {
    path = "/"
  }
}

resource "aws_lb_target_group_attachment" "attach" {
  target_group_arn = aws_lb_target_group.tg.arn
  target_id        = aws_instance.private_ec2.id
  port             = var.strapi_port
}

resource "aws_lb_listener" "listener" {
  load_balancer_arn = aws_lb.alb.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.tg.arn
  }
}
